package com.estoque.domain.enums;

public enum TipoMovimentacao {
    ENTRADA,
    SAIDA
}
