classDiagram
    direction TB

    class Produto {
        -Long id
        -String nome
        -String descricao
        -int quantidadeAtual
        -int estoqueMinimo
        -BigDecimal precoUnitario
        -Categoria categoria
        +boolean estaBaixoDoMinimo()
        +void atualizarQuantidade(int delta)
    }

    class Categoria {
        -Long id
        -String nome
        -String descricao
    }

    class Fornecedor {
        -Long id
        -String nome
        -String contato
        -String cnpj
    }

    class Movimentacao {
        -Long id
        -Produto produto
        -TipoMovimentacao tipo
        -int quantidade
        -LocalDateTime dataHora
        -String observacao
        -Fornecedor fornecedor
    }

    class TipoMovimentacao {
        <<enumeration>>
        ENTRADA
        SAIDA
    }

    class MovimentacaoBuilder {
        -Produto produto
        -TipoMovimentacao tipo
        -int quantidade
        -String observacao
        -Fornecedor fornecedor
        +MovimentacaoBuilder produto(Produto p)
        +MovimentacaoBuilder tipo(TipoMovimentacao t)
        +MovimentacaoBuilder quantidade(int q)
        +MovimentacaoBuilder observacao(String o)
        +MovimentacaoBuilder fornecedor(Fornecedor f)
        +Movimentacao build()
    }

    class ProdutoBuilder {
        -String nome
        -String descricao
        -int quantidadeAtual
        -int estoqueMinimo
        -BigDecimal precoUnitario
        -Categoria categoria
        +ProdutoBuilder comNome(String nome)
        +ProdutoBuilder comDescricao(String descricao)
        +ProdutoBuilder comQuantidadeAtual(int q)
        +ProdutoBuilder comEstoqueMinimo(int m)
        +ProdutoBuilder comPrecoUnitario(BigDecimal p)
        +ProdutoBuilder comCategoria(Categoria c)
        +Produto build()
    }

    class EstoqueObserver {
        <<interface>>
        +void onEstoqueBaixo(Produto produto)
    }

    class LogNotificador {
        +void onEstoqueBaixo(Produto produto)
    }

    class EmailNotificador {
        -String destinatario
        +void onEstoqueBaixo(Produto produto)
    }

    class CalculoEstoqueStrategy {
        <<interface>>
        +BigDecimal calcularValorEstoque(List~Produto~ produtos)
    }

    class CalculoPrecoMedioStrategy {
        +BigDecimal calcularValorEstoque(List~Produto~ produtos)
    }

    class CalculoPrecoAtualStrategy {
        +BigDecimal calcularValorEstoque(List~Produto~ produtos)
    }

    class ProdutoRepository {
        <<interface>>
        +Optional~Produto~ findById(Long id)
        +List~Produto~ findAbaixoDoEstoqueMinimo()
        +List~Produto~ findByCategoria(Categoria c)
        +List~Produto~ findByNomeContainingIgnoreCase(String nome)
        +Produto save(Produto p)
    }

    class MovimentacaoRepository {
        <<interface>>
        +List~Movimentacao~ findByProduto(Produto p)
        +List~Movimentacao~ findByProdutoOrderByDataHoraDesc(Produto p)
        +List~Movimentacao~ findByDataHoraBetween(LocalDateTime inicio, LocalDateTime fim)
        +Movimentacao save(Movimentacao m)
    }

    class EstoqueService {
        -ProdutoRepository produtoRepository
        -MovimentacaoRepository movimentacaoRepository
        -FornecedorRepository fornecedorRepository
        -List~EstoqueObserver~ observers
        -CalculoEstoqueStrategy calculoStrategy
        +MovimentacaoResponseDTO registrarEntrada(Long produtoId, int quantidade, Long fornecedorId, String obs)
        +MovimentacaoResponseDTO registrarSaida(Long produtoId, int quantidade, String obs)
        +List~ProdutoResponseDTO~ listarAbaixoDoMinimo()
        +List~MovimentacaoResponseDTO~ listarMovimentacoes(Long produtoId)
        +BigDecimal calcularValorTotalEstoque()
        +void addObserver(EstoqueObserver o)
        -void notificarObservers(Produto p)
    }

    class ProdutoService {
        -ProdutoRepository produtoRepository
        -CategoriaRepository categoriaRepository
        +ProdutoResponseDTO cadastrar(ProdutoRequestDTO dto)
        +ProdutoResponseDTO atualizar(Long id, ProdutoRequestDTO dto)
        +ProdutoResponseDTO buscarPorId(Long id)
        +List~ProdutoResponseDTO~ listarTodos()
        +List~ProdutoResponseDTO~ buscarPorNome(String nome)
        +List~ProdutoResponseDTO~ listarRecentes(int limite)
        +ProdutoResponseDTO adicionarQuantidade(Long id, int quantidade)
        +void deletar(Long id)
        +Produto buscarEntidadePorId(Long id)
    }

    class EstoqueController {
        -EstoqueService estoqueService
        +ResponseEntity registrarEntrada(EntradaDTO dto)
        +ResponseEntity registrarSaida(SaidaDTO dto)
        +ResponseEntity listarAbaixoDoMinimo()
        +ResponseEntity listarMovimentacoes(Long produtoId)
        +ResponseEntity calcularValorTotal()
    }

    class ProdutoController {
        -ProdutoService produtoService
        +ResponseEntity cadastrar(ProdutoRequestDTO dto)
        +ResponseEntity listar()
        +ResponseEntity listarRecentes(int limite)
        +ResponseEntity buscarPorId(Long id)
        +ResponseEntity buscarPorNome(String nome)
        +ResponseEntity atualizar(Long id, ProdutoRequestDTO dto)
        +ResponseEntity deletar(Long id)
        +ResponseEntity adicionarQuantidade(Long id, int quantidade)
    }

    %% Relacionamentos de domínio
    Produto --> Categoria
    Movimentacao --> Produto
    Movimentacao --> Fornecedor
    Movimentacao --> TipoMovimentacao
    MovimentacaoBuilder ..> Movimentacao : cria
    ProdutoBuilder ..> Produto : cria

    %% Observer
    EstoqueObserver <|.. LogNotificador
    EstoqueObserver <|.. EmailNotificador
    EstoqueService --> EstoqueObserver

    %% Strategy
    CalculoEstoqueStrategy <|.. CalculoPrecoMedioStrategy
    CalculoEstoqueStrategy <|.. CalculoPrecoAtualStrategy
    EstoqueService --> CalculoEstoqueStrategy

    %% Repositories (DIP)
    EstoqueService --> ProdutoRepository
    EstoqueService --> MovimentacaoRepository
    ProdutoService --> ProdutoRepository

    %% Controllers
    EstoqueController --> EstoqueService
    ProdutoController --> ProdutoService
